--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,14 +3,18 @@ galaxy_info:
   author: elnappo <elnappoo@gmail.com>
   description: Install and configure Prosody IM
   license: MIT
-  min_ansible_version: 1.8
+  min_ansible_version: 1.9
   platforms:
   - name: Ubuntu
     versions:
-    - all
+    - precise
+    - trusty
+    - vivid
   - name: Debian
     versions:
-    - all
+    - wheezy
+    - jessie
+    - stretch
   categories:
   - networking
 
