--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,5 +15,6 @@ prosody_s2s_secure_domains:
   - jabber.de
 prosody_s2s_secure_auth: False
 prosody_authentication: internal_hashed
+prosody_dhparam_length: 2048
 prosody_hosts:
   - domain: localhost
