--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
   notify: restart prosody
 
 - name: Create parameters for Diffie–Hellman (could take a while)
-  command: openssl dhparam -out /etc/prosody/certs/dh-2048.pem 2048 creates=/etc/prosody/certs/dh-2048.pem
+  command: "openssl dhparam -out /etc/prosody/certs/dh-{{ prosody_dhparam_length }}.pem {{ prosody_dhparam_length }} creates=/etc/prosody/certs/dh-{{ prosody_dhparam_length }}.pem"
   notify: restart prosody
 
 - name: Start and enable prosody on boot
