--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,16 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq python-apt python-pycurl curl ufw
 install:
-  - pip install ansible
+  - pip install ansible --upgrade
   - ansible --version
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
   - echo localhost > inventory
 script:
   - ansible-playbook -i inventory --syntax-check --list-tasks test.yml
   - ansible-playbook -i inventory --connection=local --sudo -vvvv test.yml
-  - >
-    ansible-playbook -i inventory --connection=local --sudo test.yml
-    | grep -q 'changed=0.*failed=0'
-    && (echo 'Idempotence test: pass' && exit 0)
-    || (echo 'Idempotence test: fail' && exit 1)
-  - prosodyctl status
+  - ansible-playbook -i inventory --connection=local --sudo -vvvv test.yml
 after_script:
+  - prosodyctl status
   - prosodyctl check
   - prosodyctl about
   - ls -la /etc/prosody/
