--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,7 @@
 - name: Install Prosody
   apt: name={{ item }}
   with_items:
+    - mercurial
     - lua-event
     - lua-zlib
     - "{{ prosody_package }}"
@@ -20,6 +21,9 @@
 - name: Create parameters for Diffie–Hellman (could take a while)
   command: "openssl dhparam -out /etc/prosody/certs/dh-{{ prosody_dhparam_length }}.pem {{ prosody_dhparam_length }} creates=/etc/prosody/certs/dh-{{ prosody_dhparam_length }}.pem"
   notify: restart prosody
+
+- name: Get prosody external modules repository
+  hg: repo=https://hg.prosody.im/prosody-modules/ dest=/usr/share/prosody-external-modules
 
 - name: Start and enable prosody on boot
   service: name=prosody state=started enabled=yes
