--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 install:
   - pip install ansible --upgrade
   - ansible --version
-  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+  - printf '[defaults]\nroles_path=../' >ansible.cfg
   - echo localhost > inventory
 script:
   - ansible-playbook -i inventory --syntax-check --list-tasks test.yml
@@ -21,3 +21,5 @@ after_script:
   - prosodyctl about
   - ls -la /etc/prosody/
   - cat /etc/prosody/prosody.cfg.lua
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
