--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: elnappo <elnappoo@gmail.com>
+  author: elnappo <elnappo@nerdpol.io>
   description: Install and configure Prosody IM
   license: MIT
   min_ansible_version: 1.9
@@ -9,13 +9,12 @@ galaxy_info:
     versions:
     - precise
     - trusty
-    - vivid
   - name: Debian
     versions:
     - wheezy
     - jessie
-    - stretch
-  categories:
+  galaxy_tags:
   - networking
+  - chat
 
 dependencies: []
