--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,11 @@ install:
 script:
   - ansible-playbook -i inventory --syntax-check --list-tasks test.yml
   - ansible-playbook -i inventory --connection=local --become -vvvv test.yml
-  - ansible-playbook -i inventory --connection=local --become -vvvv test.yml
+  - >
+    ansible-playbook -i inventory --connection=local --become test.yml
+    | grep -q 'changed=0.*failed=0'
+    && (echo 'Idempotence test: pass' && exit 0)
+    || (echo 'Idempotence test: fail' && exit 1)
 after_script:
   - prosodyctl status
   - prosodyctl check
