--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,17 @@
 ---
 # tasks file for ansible-role-prosody
 - name: Add Prosody repository key
-  apt_key: url=https://prosody.im/files/prosody-debian-packages.key state=present
+  apt_key:
+    url: https://prosody.im/files/prosody-debian-packages.key
+    state: present
 
 - name: Add Prosody repository
-  apt_repository: repo="deb http://packages.prosody.im/debian {{ ansible_distribution_release }} main"
+  apt_repository:
+    repo: "deb http://packages.prosody.im/debian {{ ansible_distribution_release }} main"
 
-- name: Install Prosody
-  apt: name={{ item }}
+- name: Install Prosody and dependencies
+  apt:
+    name: "{{ item }}"
   with_items:
     - mercurial
     - lua-event
@@ -15,7 +19,12 @@
     - "{{ prosody_package }}"
 
 - name: Configure Prosody
-  template: src=prosody.cfg.lua dest=/etc/prosody/prosody.cfg.lua group=root owner=root mode=0755
+  template:
+    src: prosody.cfg.lua
+    dest: /etc/prosody/prosody.cfg.lua
+    group: root
+    owner: root
+    mode: 0755
   notify: restart prosody
 
 - name: Create parameters for Diffie–Hellman (could take a while)
@@ -23,13 +32,21 @@
   notify: restart prosody
 
 - name: Get prosody external modules repository
-  hg: repo=https://hg.prosody.im/prosody-modules/ dest=/usr/share/prosody-external-modules
+  hg:
+    repo: https://hg.prosody.im/prosody-modules/
+    dest: /usr/share/prosody-external-modules
 
 - name: Start and enable prosody on boot
-  service: name=prosody state=started enabled=yes
+  service:
+    name: prosody
+    state: started
+    enabled: yes
 
 - name: Set firewall rules for Prosody
-  ufw: port={{ item }} proto=tcp rule=allow
+  ufw:
+    port: "{{ item }}"
+    proto: tcp
+    rule: allow
   with_items:
     - 5222
     - 5269
