Introduce prosody_external_modules_path
This variable holds the path for the external modules, allowing it to be
easily overridden.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,7 @@ prosody_modules:
   - vcard
   - ping
   - register
+prosody_external_modules_path: /usr/share/prosody-external-modules
 prosody_external_modules: []
 prosody_s2s_secure_domains:
   - jabber.org
