Port to OpenBSD
While here make the role easier to use with other operating systems.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,9 @@ galaxy_info:
       versions:
         - jessie
         - stretch
+    - name: OpenBSD
+      versions:
+        - 6.5
   galaxy_tags:
     - networking
     - chat
