--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Include OS specific variables
   include_vars: "{{ ansible_os_family }}.yml"
 - name: Include OS specific tasks
-  include: "install-{{ ansible_os_family }}.yml"
+  include_tasks: "install-{{ ansible_os_family }}.yml"
 
 - name: Configure Prosody
   template:
